Bone drawing and Ui bug #46841

Closed
opened 2015-11-22 15:20:13 +01:00 by Andrew · 4 comments

System Information
Windows 7, Nvidia 750 ti

Blender Version
Broken: 2.76.2
Worked: 2.76

Cyclic dependency makes bones look thicker, the grid and ui borders too. I made a video of this blender-app 2015-11-22 16-38-50-61.avi

To reproduce (in short ) - create two bones, parent one to ahother, make a parent drive some of it's child channels, move the bones few times.

To reproduce (long ) - Add metarig, select the upperarm bone, add single driver to Z rot channel. Open graph editor, choose drivers mode. Then hit N, expand Drivers menu and setup drivers like this: Type - average value, under var - transform channel, object - metarig -> shoulder bone, then Y rotation, local space and generator modifier. Try to move some bones multiple times.

After removing the driver, problem is still here.

If you fix this my eyes will bleed no more, thanks in advance!
dependency_bug.blend

**System Information** Windows 7, Nvidia 750 ti **Blender Version** Broken: 2.76.2 Worked: 2.76 Cyclic dependency makes **bones** look **thicker**, the **grid** and **ui borders** too. I made a video of this [blender-app 2015-11-22 16-38-50-61.avi](https://archive.blender.org/developer/F257147/blender-app_2015-11-22_16-38-50-61.avi) To reproduce (in short ) - create two bones, parent one to ahother, make a parent drive some of it's child channels, move the bones few times. To reproduce (long ) - Add metarig, select the upperarm bone, add single driver to Z rot channel. Open graph editor, choose drivers mode. Then hit N, expand Drivers menu and setup drivers like this: Type - average value, under var - transform channel, object - metarig -> shoulder bone, then Y rotation, local space and generator modifier. Try to move some bones multiple times. After removing the driver, problem is still here. If you fix this my eyes will bleed no more, thanks in advance! [dependency_bug.blend](https://archive.blender.org/developer/F257162/dependency_bug.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @AndrewShi

Added subscriber: @AndrewShi
Campbell Barton self-assigned this 2015-11-23 11:45:17 +01:00

This issue was referenced by 47dd7d7133

This issue was referenced by 47dd7d71337e069c7320338e0031199d9b5fb877

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46841
No description provided.