Fix T46841: Thick lines w/ graph visible